<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2015 Thiago Lopes Rosa

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources>

    <!-- MAIN -->
    <string name="app_title">RoboTita</string>

    <!-- DEVICES -->
    <string name="device_title">Select device</string>
    <string name="device_search">Search devices</string>
    <string name="device_status_unsupported">Bluetooth is not supported on this device!</string>
    <string name="device_status_disabled">Bluetooth is not enabled!</string>
    <string name="device_status_connecting">Connecting to %1$s&#8230;</string>
    <string name="device_status_failed">Failed to connect to %1$s&#8230;</string>
    <string name="device_status_connected">Bluetooth device connected!</string>
    <string name="device_status_disconnected">Bluetooth device disconnected!</string>
    <string name="device_connected">Connected</string>
    <string name="device_not_connected">Not connected</string>
    <string name="device_disconnect">Disconnect</string>
    <string name="device_new">NEW</string>

    <!-- CONTROL -->
    <string name="control_title">Manual control</string>
    <string name="control_motor_top">TOP MOTOR</string>
    <string name="control_motor_bottom">BOTTOM MOTOR</string>
    <string name="control_servo_feed">BALL FEEDER</string>
    <string name="control_servo_horizontal">HORIZONTAL</string>
    <string name="control_servo_vertical">VERTICAL</string>
    <string name="control_servo_rotation">ROTATION</string>
    <string name="control_servo_agitator">AGITATOR</string>
    <string name="control_forward">FORWARD</string>
    <string name="control_reverse">REVERSE</string>
    <string name="control_on">ON</string>
    <string name="control_off">OFF</string>
    <string name="control_auto">AUTO</string>

</resources>