<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2015 Thiago Lopes Rosa

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_background"
    android:paddingTop="?attr/actionBarSize" >

    <LinearLayout
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/logo"
            style="@style/BaseImage"
            android:src="@drawable/logo" />

        <android.support.v7.widget.CardView
            android:id="@+id/select_device"
            style="@style/BaseCardView"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:minHeight="@dimen/button_height" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="@dimen/button_height"
                android:orientation="horizontal" >

                <TextView
                    style="@style/BaseButtonText"
                    android:text="@string/device_title"
                    android:textAllCaps="true" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/manual_control"
            style="@style/BaseCardView"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:minHeight="@dimen/button_height" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="@dimen/button_height"
                android:orientation="horizontal" >

                <TextView
                    style="@style/BaseButtonText"
                    android:text="@string/control_title"
                    android:textAllCaps="true" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/disconnect"
            style="@style/BaseCardView"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/button_margin"
            android:minHeight="@dimen/button_height" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:minHeight="@dimen/button_height"
                android:orientation="horizontal" >

                <TextView
                    style="@style/BaseButtonText"
                    android:text="@string/device_disconnect"
                    android:textAllCaps="true" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>